<resources>
    <string name="app_name">MonCity</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_name">M O N . C I T Y</string>
    <string name="logo_description">m a r k e t p l a c e</string>
    <string name="logo_logodesc">logo</string>
    <string name="what_about">what about</string>

    <string name="input_name_hint">Имя</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Пароль</string>
    <string name="input_tel_hint">3800000000</string>
    <string name="btn_reg">Зарегистрироватся</string>
    <string name="or_sign">Еще не зарегистрированы? </string>
    <string name="or_sign_in">Зарегистрироватся</string>
    <string name="or_reg">Уже зарегистрированы? </string>
    <string name="or_reg_in">Войти</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_items">Товары</string>
    <string name="str_services">Услуги</string>
    <string name="str_finance">Финансы</string>
    <string name="nothing">Ничего</string>
    <string name="services_text">Услуги</string>
    <string name="shop_text">Товары</string>
    <string name="busines_text">Бизнес</string>
    <string name="title_activity_busines_index">BusinesIndexActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="page_title">Товары</string>
    <string name="todo">TODO</string>


</resources>
