<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="361dp"
        android:layout_height="496dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="49dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo_logodesc"
                    android:visibility="visible"
                    app:srcCompat="@android:drawable/progress_indeterminate_horizontal"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/logo_name"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.454"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/logo_description"
                    android:textSize="18sp"
                    android:typeface="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0"
                tools:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/what_about"
                        app:srcCompat="@drawable/ic_launcher_background"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="40dp"
                        android:forceDarkAllowed="false"
                        app:srcCompat="@drawable/add" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/what_about"
                            app:srcCompat="@drawable/menu" />
                    </FrameLayout>

                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:hint="@string/input_name_hint"
                        android:inputType="textPersonName"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/what_about"
                            app:srcCompat="@drawable/menu" />
                    </FrameLayout>

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:hint="@string/input_email_hint"
                        android:inputType="textWebEmailAddress"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/what_about"
                            app:srcCompat="@drawable/menu" />
                    </FrameLayout>

                    <EditText
                        android:id="@+id/edit_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:hint="@string/input_password_hint"
                        android:inputType="textPassword"
                        android:password="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <FrameLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/what_about"
                            app:srcCompat="@drawable/edit" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="30dp"
                        android:layout_height="30dp">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/what_about"
                            app:srcCompat="@drawable/menu" />
                    </FrameLayout>

                    <EditText
                        android:id="@+id/edit_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:hint="@string/input_tel_hint"
                        android:inputType="phone"
                        android:phoneNumber="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_reg"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:ellipsize="start"
                android:ems="10"
                android:password="false"
                android:selectAllOnFocus="false"
                android:text="@string/btn_reg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="32dp"
                android:text="@string/or_reg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_reg" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="32dp"
                android:text="@string/or_reg_in"
                android:textColor="#03A9F4"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/btn_reg" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>